<resources>
    <string name="app_name">HouseMap</string>
    <string name="construction">Construction</string>
    <string name="visualisation">Visualisation</string>
    <string name="consulter_les_pieces">Consulter les pieces</string>
    <string name="ajouter_une_pi_ce">Ajouter une pièce</string>
    <string name="ajout_mur">Ajout mur</string>
    <string name="annuler">Annuler</string>
    <string name="nom_de_pi_ce">Nom de pièce :</string>
    <string name="valider">Valider</string>
    <string name="capteurs">Capteurs</string>
    <string name="boussole">Boussole</string>
    <string name="mur_nord">Mur Nord</string>
    <string name="mur_sud">Mur sud</string>
    <string name="mur_est">Mur est</string>
    <string name="mur_ouest">Mur ouest</string>
    <string name="nouveau_nom_de_pi_ce">Nouveau nom de pièce :</string>
    <string name="ajouter_porte">ajouter porte</string>
    <string name="Valider">valider</string>
    <string name="todo">TODO</string>
    <string name="reprendre_mur">Reprendre Mur</string>
    <string name="modifier_porte">Modifier porte</string>
    <string name="supprimer_piece">supprimer piece</string>
    <string name="changer_porte">changer porte</string>
    <string name="supprimer_porte">supprimer porte</string>
    <string name="modifier_nom_sortie">Modifier nom sortie</string>
    <string name="initialiser_piece">Initialiser Piece</string>
    <string name="sauvegarder">sauvegarder</string>
    <string name="charger">charger</string>
    <string name="supprimer_tout">supprimer tout</string>
    <string name="suivant">Suivant</string>
    <string name="pr_c_dent">Précédent</string>
    <string name="nompiece">NomPiece</string>
    <string name="d_truire_toute_la_maison">Détruire toute la maison</string>
    <string name="quitter_l_application">Quitter l\'application</string>
    <string name="reprendre_la_maison_pr_c_dente">Reprendre la maison précédente</string>
</resources>