<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/brique"
        tools:context=".ChangerActivity">
    <EditText
            android:layout_width="225dp"
            android:layout_height="52dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextNamePiece3"
            android:minHeight="48dp" android:autofillHints="" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.086" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp" android:textSize="16sp"
            android:hint="@string/nouveau_nom_de_pi_ce" android:textColorHint="#FFFFFF" android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/valider"
            android:onClick="clickValiderNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonValide"
            android:layout_marginStart="28dp" app:layout_constraintStart_toEndOf="@+id/editTextTextNamePiece3"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp" android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" app:iconTint="#2196F3" android:backgroundTint="#03A9F4"
            android:textColor="#4A148C"/>
    <Button
            android:text="@string/mur_nord"
            android:layout_width="wrap_content"
            android:onClick="clickNord"
            android:layout_height="wrap_content" android:id="@+id/button7"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="228dp"/>
    <Button
            android:text="@string/supprimer_piece"
            android:onClick="clickSupprimer"
            android:layout_width="180dp"
            android:layout_height="52dp" android:id="@+id/button18"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="118dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="588dp" android:layout_marginEnd="113dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:backgroundTint="#FF6D00" android:textColor="#212121"/>
    <Button
            android:text="@string/mur_est"
            android:layout_width="wrap_content"
            android:onClick="clickEst"
            android:layout_height="wrap_content" android:id="@+id/button9"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="368dp"/>
    <Button
            android:text="@string/Valider"
            android:onClick="clickValider"
            android:layout_width="180dp"
            android:layout_height="52dp" android:id="@+id/termine5"
            app:iconTint="#E91E63" android:backgroundTint="#7CB342" android:textColor="#263238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="528dp"/>
    <Button
            android:text="Initialiser Piece"
            android:onClick="clickValider"
            android:layout_width="180dp"
            android:layout_height="52dp" android:id="@+id/termine7"
            app:iconTint="#E91E63" android:backgroundTint="#64FFDA" android:textColor="#263238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="140dp"/>
    <Button
            android:text="@string/mur_ouest"
            android:layout_width="wrap_content"
            android:onClick="clickOuest"
            android:layout_height="wrap_content" android:id="@+id/button6"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="444dp"/>
    <Button
            android:text="@string/mur_sud"
            android:layout_width="wrap_content"
            android:onClick="clickSud"
            android:layout_height="wrap_content" android:id="@+id/button8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="296dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>