<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/brique"
        tools:context=".ModifHouseActivity">

    <Button
            android:text="@string/ajouter_porte"
            android:layout_width="180dp"
            android:layout_height="52dp" android:id="@+id/button16"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="118dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="336dp" android:layout_marginEnd="113dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:backgroundTint="#CCFF90" android:textColor="#212121"/>
    <Button
            android:text="@string/modifier_porte"
            android:layout_width="180dp"
            android:layout_height="52dp" android:id="@+id/button19"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="118dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="396dp" android:layout_marginEnd="113dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:backgroundTint="#FFE57F" android:textColor="#212121"/>
    <Button
            android:text="@string/Valider"
            android:onClick="clickValider"
            android:layout_width="180dp"
            android:layout_height="52dp" android:id="@+id/termine3"
            app:iconTint="#E91E63" android:backgroundTint="#7CB342" android:textColor="#4E342E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="456dp"/>
    <Button
            android:text="@string/reprendre_mur"
            android:onClick="clickAjoutMur"
            android:layout_width="180dp"
            android:layout_height="52dp" android:id="@+id/button17"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="118dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="268dp" android:layout_marginEnd="113dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:backgroundTint="#0097A7" android:textColor="#212121"/>
</androidx.constraintlayout.widget.ConstraintLayout>