<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/brique"
        android:layout_height="match_parent"
        tools:context=".VisualisationActivity">

    <TextView
            android:text="@string/nompiece"
            android:layout_width="272dp"
            android:layout_height="46dp" android:id="@+id/textView"
            android:textSize="34sp" android:textColor="#18FFFF" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp"/>
    <ImageView
            android:layout_width="298dp"
            android:layout_height="288dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="116dp"/>
    <Button
            android:text="@string/suivant"
            android:onClick="clickSuivant"
            android:layout_width="133dp"
            android:layout_height="63dp" android:id="@+id/button24"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/pr_c_dent"
            android:onClick="clickPrec"
            android:layout_width="133dp"
            android:layout_height="63dp" android:id="@+id/button20"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>